--- a/HBlink3/hblink-SAMPLE.cfg
+++ b/HBlink3/hblink-SAMPLE.cfg
@@ -156,8 +156,8 @@ REPEAT: True
 MAX_PEERS: 10
 EXPORT_AMBE: False
 IP:
-PORT: 54000
-PASSPHRASE: s3cr37w0rd
+PORT: 62030
+PASSPHRASE: passw0rd
 GROUP_HANGTIME: 5
 USE_ACL: True
 REG_ACL: DENY:1
@@ -249,10 +249,10 @@ ENABLED: True
 LOOSE: False
 EXPORT_AMBE: False
 IP: 
-PORT: 54098
+PORT: 62031
 MASTER_IP: 127.0.0.1
 MASTER_PORT: 54100
-PASSPHRASE: password
+PASSPHRASE: passw0rd
 CALLSIGN: ECHO
 RADIO_ID: 9999
 RX_FREQ: 000000000
