--- a/HBlink3/hblink-SAMPLE.cfg
+++ b/HBlink3/hblink-SAMPLE.cfg
@@ -252,7 +252,7 @@ IP:
 PORT: 62031
 MASTER_IP: 127.0.0.1
 MASTER_PORT: 54100
-PASSPHRASE: passw0rd
+PASSPHRASE: password
 CALLSIGN: ECHO
 RADIO_ID: 9999
 RX_FREQ: 000000000
